--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,106 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
 body {
+	font-size: 100%;
 	font-family: cursive;
 }
-a {
-	text-decoration: none;
+
+section {
+	/*height: 100vh;
+	*/
+	height: auto;
+	background: repeating-linear-gradient(
+		45deg,
+		rgba(0, 0, 0, 0) 20px,
+		rgba(0, 0, 0, 0) 40px,
+		#df6c4f 40px,
+		#df6c4f 60px
+	);
 }
-li {
-	list-style: none;
+.logo {
+	max-width: 10%;
+	margin: 10px 20px;
+}
+.logo img {
+	max-width: 100%;
+	height: auto !important;
+	border-radius: 95%;
+}
+header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 18%;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+nav ul {
+	display: flex;
+	flex-flow: nowrap;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	transition: 0.5s;
+	list-style-type: none;
+}
+ul li a {
+	padding: 10px 20px;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #262625;
+	font-weight: bold;
+	transition: 0.5s;
+}
+ul li a:hover {
+	background: rgba(128, 128, 128, 0.863);
+	color: #fff;
+	transition: 0.5s;
+}
+.dropbtn {
+	background-color: transparent;
+	font-size: 100%;
+	font-family: cursive;
+	border: none;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: black;
+	font-weight: bold;
+	transition: 0.5s;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: rgba(128, 128, 128, 0.863);
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
+.dropdown:hover .dropbtn {
+	background-color: rgba(128, 128, 128, 0.863);
 }
