--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,7 @@ section {
 	/*height: 100vh;
 	*/
 	height: auto;
-	background: repeating-linear-gradient(
-		45deg,
-		rgba(0, 0, 0, 0) 20px,
-		rgba(0, 0, 0, 0) 40px,
-		#df6c4f 40px,
-		#df6c4f 60px
-	);
+	background: radial-gradient(circle farthest-side, #fceabb, #a06b1b);
 }
 .logo {
 	max-width: 10%;
@@ -34,7 +28,7 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 18%;
+	height: 15vh;
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 nav ul {
@@ -103,4 +97,44 @@ ul li a:hover {
 
 .dropdown:hover .dropbtn {
 	background-color: rgba(128, 128, 128, 0.863);
+}
+
+.bkg {
+	padding: 1vh;
+}
+#principal {
+	width: 100%;
+	padding: 0 7%;
+	display: table;
+	margin: 0;
+	max-width: 100%;
+
+	background-image: url("/img/resaturant-background.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 80vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.main {
+	position: relative;
+	width: auto;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+footer {
+	width: 100%;
+	height: 3vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+	font-style: italic;
+}
+footer p {
+	font-weight: bold;
 }
