--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ section {
 	max-width: 100%;
 	height: auto !important;
 	border-radius: 95%;
+	border: 2px solid #422800;
 }
 header {
 	display: flex;
@@ -209,9 +210,6 @@ div.elem-group.inlined {
 	float: left;
 	margin-left: 0;
 }
-textarea {
-	height: 150px;
-}
 
 hr {
 	border-radius: 2px;
@@ -258,4 +256,85 @@ form {
 .formButton button:active {
 	box-shadow: #422800 2px 2px 0 0;
 	transform: translate(2px, 2px);
+}
+
+.text {
+	flex-grow: 0.5;
+	margin-bottom: 0.8em;
+	background: radial-gradient(circle farthest-side, #fceabb, #a06b1b);
+	border: 2px solid #422800;
+	border-radius: 30px;
+	padding: 10px;
+}
+
+.text h3:nth-of-type(2) {
+	margin-top: 01.438rem;
+}
+
+.plate {
+	display: flex;
+	align-items: center;
+}
+
+.plate p:first-child {
+	text-transform: uppercase;
+}
+
+.plate p {
+	margin: 0;
+}
+
+.dots {
+	border-bottom: 1px solid #ededed;
+	flex: 1;
+	margin: 0 10px 0 10px;
+}
+
+.description {
+	margin: 0 0 20px 0;
+}
+.mainMap {
+	position: relative;
+	width: auto;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	border: 5px solid whitesmoke;
+	background: radial-gradient(circle farthest-side, #fceabb, #e6b873);
+	margin: 2% auto;
+}
+.mainMap h1,
+h2,
+button {
+	margin: 10px;
+}
+.mainMap h1 {
+	font-family: "Trebuchet MS", sans-serif;
+	font-size: 3em;
+	letter-spacing: -2px;
+	border-bottom: 2px solid black;
+	text-transform: uppercase;
+}
+.container {
+	width: 100%;
+	height: 80%;
+	margin: 2%;
+	box-shadow: 0px 0px 10px #c8c7d9;
+	position: relative;
+	display: flex;
+	align-items: center;
+	/*justify-content: center;*/
+	flex-direction: row;
+	border: 5px solid whitesmoke;
+	background: radial-gradient(circle farthest-side, #fceabb, #e6b873);
+	padding: 20px;
+}
+.container .map {
+	width: 100%;
+	height: 100%;
+	float: left;
+	border: 2px solid whitesmoke;
+	margin: 2%;
 }
